Fixing scrollbar on sc player in IE

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -918,6 +918,7 @@ li {
   width: 90%;
   height: 47px;
   position: relative;
+  overflow: hidden;
 }
 .sc-player ol,
 .sc-player li {
